--- a/index.html
+++ b/index.html
@@ -3,11 +3,35 @@
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Simple landing page with html and css</title>
+ <title>Simple form with html and css</title>
+ <link rel="stylesheet" href="/style.css">
 </head>
 <body>
- <div>
-  <h1>lANDING PAGE WITH HTML AND CSS</h1>
+ <div class="form-container">
+  <h2>Contact Us</h2>
+  <form>
+   <div class="input-group">
+    <label for="name">Name</label>
+    <input type="text" id="name" name="name" placeholder="Enter your name" required>
+   </div>
+
+   <div class="input-group">
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" placeholder="Enter your email" required>
+   </div>
+
+   <div class="input-group">
+    <label for="phone">Phone number</label>
+    <input type="tel" id="phone" name="phone" placeholder="Enter your Phone number" required>
+   </div>
+
+   <div class="input-group">
+    <label for="message">message</label>
+   <textarea name="message" placeholder="Enter your message here" rows="5" required></textarea>
+   </div>
+
+   <button type="submit">Submit</button>
+  </form>
  </div>
 </body>
 </html>
